# RetroCapture

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.linux  Dockerfile.linux-arm32v7  Dockerfile.linux-arm64  Dockerfile.linux-arm64v8  Dockerfile.linux-armv7  Dockerfile.linux-x86_64  Dockerfile.windows  Dockerfile.windows-x86_64  Dockerfile.windows.alternative  FALTANDO_IMPLEMENTAR.md  LICENSE  PARAMETERS.md  PLANEJAMENTO.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RELEASE_NOTES_0.6.0-alpha.md  RESUMO_TRABALHO_SHADERS.md  RUN_EXAMPLES.md  RetroCapture.code-workspace  RetroCapture.ini  SHADER_FIXES_v0.3.1.md  SHADER_WORK_SUMMARY.md  SIMPLIFICACAO_GLSL.md  TROUBLESHOOTING_RASPBERRY_PI.md  USAGE.md  build-appimage.sh  build-installer-temp.sh  build-linux-arm64-docker.sh  build-linux-armv7-docker.sh  build-linux-docker.sh  build-on-raspberry-pi.sh  build-windows-docker.sh  build-windows-installer.sh  build-windows-x86_64-docker.sh  build.sh  (+21 more)
assets/i18n/: en.json  pt.json
config/: default.json
docs/: ARCHITECTURE.md  BUILD_WINDOWS_MANUAL.md  CHAT_PROTOCOL.md  CONTRIBUTING.md  CPU_COMPATIBILITY.md  DEBUG_PASS10.md  DESIGN_PATTERNS.md  DIRECTFB_SUPPORT.md  DIRECTORY_PROTOCOL.md  DOCKER_BUILD.md  DOCKER_SIMPLIFICADO.md  FALTANDO_IMPLEMENTAR.md  FFMPEG_COMPATIBILITY.md  HTTPS_IMPLEMENTATION.md  INJECAO_VARIAVEIS_PASS.md  MACOS_BUILD.md  MACOS_PORT_STRATEGY.md  MXE_SETUP.md  NGINX_REVERSE_PROXY.md  PATHS.md  PERFORMANCE_OPTIMIZATIONS.md  PLANNING_CAPTURE_PRESETS.md  PLANNING_RECORDING.md  PROGRESSO_FINAL.md  RASPBERRY_PI_SETUP.md  README.md  REFACTORING_PLAN.md  REMOTE_STREAM_PROTOCOL.md  SDL2_DIRECTFB_USAGE.md  SHADER_INTEGRATION.md  SHADER_SUPPORT_STATUS.md  SOLID_ANALYSIS.md  STATUS_BUG_SWIZZLE.md  STATUS_WINDOWS_PORT.md  STREAMING_PLAN.md  STREAMING_WEB_PLAYER_PLAN.md  SUMMARY.txt  VIRTCAM_MACOS.md  VIRTCAM_WINDOWS.md  VITORIA_PARCIAL.md  (+6 more)
platform/: README.md  docker-compose.yml
platform/services/: README.md
shaders/: test.glsl  test_passthrough.glsl  test_passthrough.slangp  test_simple.glsl  test_stock.slang
shaders/1080p/: 01-1080p-crt-guest-advanced-hd-aperture-grille-u-normal-rf.slangp  02-1080p-crt-guest-advanced-hd-aperture-grille-u-normal-composite.slangp  03-1080p-crt-guest-advanced-hd-aperture-grille-u-normal-composite-rainbow-artifacts.slangp  04-1080p-crt-guest-advanced-hd-aperture-grille-u-normal-s-video.slangp  05-1080p-crt-guest-advanced-hd-aperture-grille-u-normal-rgb.slangp  06-1080p-crt-guest-advanced-hd-aperture-grille-u-warm-rf.slangp  07-1080p-crt-guest-advanced-hd-aperture-grille-u-warm-composite.slangp  08-1080p-crt-guest-advanced-hd-aperture-grille-u-warm-composite-rainbow-artifacts.slangp  09-1080p-crt-guest-advanced-hd-aperture-grille-u-warm-s-video.slangp  10-1080p-crt-guest-advanced-hd-aperture-grille-u-warm-rgb.slangp  11-1080p-crt-guest-advanced-hd-aperture-grille-u-cool-rf.slangp  12-1080p-crt-guest-advanced-hd-aperture-grille-u-cool-composite.slangp  13-1080p-crt-guest-advanced-hd-aperture-grille-u-cool-composite-rainbow-artifacts.slangp  14-1080p-crt-guest-advanced-hd-aperture-grille-u-cool-s-video.slangp  15-1080p-crt-guest-advanced-hd-aperture-grille-u-cool-rgb.slangp  16-1080p-crt-guest-advanced-hd-aperture-grille-j-normal-rf.slangp  17-1080p-crt-guest-advanced-hd-aperture-grille-j-normal-composite.slangp  18-1080p-crt-guest-advanced-hd-aperture-grille-j-normal-composite-rainbow-artifacts.slangp  19-1080p-crt-guest-advanced-hd-aperture-grille-j-normal-s-video.slangp  20-1080p-crt-guest-advanced-hd-aperture-grille-j-normal-rgb.slangp  21-1080p-crt-guest-advanced-hd-aperture-grille-j-warm-rf.slangp  22-1080p-crt-guest-advanced-hd-aperture-grille-j-warm-composite.slangp  23-1080p-crt-guest-advanced-hd-aperture-grille-j-warm-composite-rainbow-artifacts.slangp  24-1080p-crt-guest-advanced-hd-aperture-grille-j-warm-s-video.slangp  25-1080p-crt-guest-advanced-hd-aperture-grille-j-warm-rgb.slangp  26-1080p-crt-guest-advanced-hd-aperture-grille-j-cool-rf.slangp  27-1080p-crt-guest-advanced-hd-aperture-grille-j-cool-composite.slangp  28-1080p-crt-guest-advanced-hd-aperture-grille-j-cool-composite-rainbow-artifacts.slangp  29-1080p-crt-guest-advanced-hd-aperture-grille-j-cool-s-video.slangp  30-1080p-crt-guest-advanced-hd-aperture-grille-j-cool-rgb.slangp  31-1080p-crt-guest-advanced-hd-aperture-grille-pal-normal-rf.slangp  32-1080p-crt-guest-advanced-hd-aperture-grille-pal-normal-composite.slangp  33-1080p-crt-guest-advanced-hd-aperture-grille-pal-normal-composite-rainbow-artifacts.slangp  34-1080p-crt-guest-advanced-hd-aperture-grille-pal-normal-s-video.slangp  35-1080p-crt-guest-advanced-hd-aperture-grille-pal-normal-rgb.slangp  36-1080p-crt-guest-advanced-hd-aperture-grille-pal-warm-rf.slangp  37-1080p-crt-guest-advanced-hd-aperture-grille-pal-warm-composite.slangp  (+8 more)
src/: main.cpp  retrocapture.rc
src/dal_plugin/: CMakeLists.txt  Info.plist.in  Plugin.mm  PluginConstants.h  SharedMemoryReader.cpp  SharedMemoryReader.h
src/dshow_filter/: CLSIDs.h  CMakeLists.txt  CRetroCaptureFilter.cpp  CRetroCaptureFilter.h  CRetroCaptureStream.cpp  CRetroCaptureStream.h  DllEntry.cpp  README.md  RetroCaptureVCam.def  SharedMemoryReader.cpp  SharedMemoryReader.h
ssl/: README.md  server.crt  server.key
tools/: README.md  build-linux-appimage-x86_64.sh  build-linux-arm32v7-docker.sh  build-linux-arm64-docker.sh  build-linux-arm64v8-docker.sh  build-linux-x86_64-docker.sh  build-macos-bundle.sh  build-macos.sh  build-on-raspberry-pi.sh  build-windows-installer.sh  build-windows-x86_64-docker.sh  check-dependencies.sh  check-directfb.sh  clean-build.sh  diagnose-cpu-compatibility.sh  docker-build-appimage.sh  docker-build-linux-arm32v7.sh  docker-build-linux-arm64.sh  docker-build-linux-arm64v8.sh  docker-build-linux-armv7.sh  docker-build-linux-x86_64.sh  docker-build-windows-x86_64.sh  extract-changelog-section.sh  install-deps-macos.sh  install-deps-manjaro.sh  install-deps-raspberry-pi.sh  install-virtcam-macos.sh  package-release.sh  retrocapture-standalone.sh  smoke-test.sh  sync-source-raspiberry.sh  test-macos.sh
(+305 files in other folders)
